# objectbox-rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  install.sh
.github/workflows/: rust.yml
builder/: Cargo.toml
builder/src/: id.rs  lib.rs  objectbox-model-serde.rs
example/: .gitignore  Cargo.toml  README.md  build.rs
example/fb_bindings_generated/: Cargo.toml
example/fb_bindings_generated/src/: lib.rs  table.fbs  table_generated.rs
example/src/: entities.rs  lib.rs  main.rs  objectbox-model.json
example/tests/: basic_ob_box_ops.rs  basic_query_ops.rs  flatten_inflate_fb.rs  string_query_ops.rs  unique_fields.rs
fb_binding/: Cargo.toml  build.rs
fb_binding/src/: fb_gen.rs  lib.rs  objectbox-model.json  objectbox_gen.rs  table.fbs
fb_bindings_generated/: Cargo.toml
fb_bindings_generated/src/: lib.rs  objectbox-model.json  objectbox_gen.rs  table.fbs
generator/: Cargo.toml  README.md
generator/src/: code_gen.rs  id.rs  lib.rs  model_json.rs  ob_consts.rs  single_use_factory.rs  util.rs
macros/: Cargo.toml  README.md
macros/src/: debug.rs  entity.rs  lib.rs  path_visitor.rs  property.rs
objectbox_macros/: Cargo.toml  Makefile.toml
objectbox_macros/src/: id.rs  lib.rs  objectbox-model-serde.rs
src/: async.rs  box.rs  c.rs  c_bindings.rs  cursor.rs  entity_builder.rs  error.rs  lib.rs  model.rs  opt.rs  query.rs  store.rs  traits.rs  tx.rs  txn.rs  util.rs  version.rs
src/modelinfo/: model_definition.rs
src/query/: builder.rs  condition.rs  enums.rs  huge_enum.rs  mod.rs  query.rs  traits.rs
tests/: builder.rs  macro_tests.rs
