[package]
name = "objectbox"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
objectbox-macros = { path = "macros" }
objectbox-generator = { path = "generator" }
chrono = "0.4"
flatbuffers = "22.10.26"
bytebuffer = "2.0.1"
anymap = "0.12.1"

[build-dependencies]
bindgen = "0.71.1"

# in an imaginary world, ob can be completely rewritten in rust, and safer_ffi can be used to export to other language targets