[package]
name = "builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = [ "proc-macro" ]
builder = true

[dependencies]
maplit = "1.0"
serde = "1.0"
codegen = "0.2.0"
proc-macro2 = { version = "1.0", default-features = false }
syn = "1.0" # syn = { version = "1.0.90", default-features = false, features = ["full"] }
quote = "1.0"
prettyplease = "0.1.20"
